convert quiz 3 for open publication

--- a/tutorials/quiz/mcq_tuto3.html
+++ b/tutorials/quiz/mcq_tuto3.html
@@ -18,7 +18,7 @@
 class: center, middle, inverse, title-slide
 
 # Statistical population modelling for census support
-## Day 4
+## Quiz 3
 ### Edith Darin
 
 ---
@@ -66,42 +66,6 @@ bottom:-3.5em;left:0.5em;
 </div>
 
 # Quiz
-
-
-
----
-# GIS 
-
-.center2[
-How familiar are you with GIS?
-
-1. Not at all
-2. Slightly
-3. Familair
-4. Very familiar
-]
-
----
-# GIS 
-
-.center2[
-Have you ever worked with raster data?
-
-1. Yes
-2. No
-]
----
-# GIS
-
-.center2[
-Which software are you more likely to use for GIS data?
-
-1. GIS-dedicated software (ARCGIS, QGIS,...)
-2. Python
-3. R
-4. GDAL
-5. Not applicable
-]
 
 ---
 
@@ -271,25 +235,7 @@ $$ salary = \alpha + \beta_f * experience$$
 
 $$ salary = \alpha_f + \beta_f * experience$$
 
----
-layout: false
 
-# R
-
-.center2[
-Are you familiar with tidyverse in R?
-1. Yes
-2. No
-]
----
-# R
-
-.center2[
-Can you follow easily the R code in the tutorial?
-1. Yes
-2. No
-3. I haven't looked in details at the code
-]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
