rephrase tuto and website

--- a/index.html
+++ b/index.html
@@ -256,22 +256,32 @@ $(document).ready(function () {
 
 
 <h1 class="title toc-ignore">Statistical population modelling for census support</h1>
-<h4 class="date">Last compiled on 2021-10-04</h4>
+<h4 class="date">Last compiled on 2021-10-08</h4>
 
 </div>
 
 
 <p><img src="assets/pic/wp_logotype_gray_low.png" /></p>
-<p>This website contains the teaching materials for the <strong>Statistical Population Modelling for Census Support workshop,</strong> funded by the <a href="https://www.unfpa.org/">United Nations Population Fund</a>. It has been developed at the <a href="https://www.worldpop.org/">WorldPop Research Group</a>, University of Southampton.</p>
-<p>It has been first taught to the Brazilian Stats Office, Instituto Brasileiro de Geografia e Estatística (IBGE), in October 2021.</p>
+<p>Statistical population modelling is a powerful tool for producing gridded population estimates that can support census activities. <a href="https://www.worldpop.org/">WorldPop</a> at the University of Southampton is a global leader in developing these methods and has partnered with the <a href="https://www.unfpa.org/">United Nations Population Fund (UNFPA)</a> to provide support to national statistics offices in training and production of high-resolution gridded population estimates from existing data sources (e.g. household surveys, building footprints, administrative records, census projections).</p>
+<p>This website provides a series of tutorials in Bayesian statistics for population modelling and hands-on experience to start developing the necessary skills. It includes example code and other resources designed to expedite the learning curve as much as possible.</p>
+<p>The key concepts that will be covered in the tutorial series will include:</p>
+<ol style="list-style-type: decimal">
+<li><p>Introduction to software for Bayesian statistical modelling:  R and Stan,</p></li>
+<li><p>Simple linear regression in a Bayesian context,</p></li>
+<li><p>Random effects to account for settlement type (e.g. urban/rural) and other types of stratification in survey data,</p></li>
+<li><p>Quantifying and mapping uncertainties in population estimates and</p></li>
+<li><p>Diagnostics to evaluate model performance (e.g. cross-validation).</p></li>
+</ol>
+<p>It has been taught in a remote workshop to the Brazilian Stats Office, Instituto Brasileiro de Geografia e Estatística (IBGE), in October 2021.</p>
 <div id="material" class="section level2">
 <h2>Material</h2>
 <ul>
 <li><a href="tutorials/day1_presentation.html">Introduction</a></li>
 <li><a href="tutorials/tutorial1/tutorial1_linearRegression.html">Tutorial 1</a>: How to think like a Bayesian and build a first population model? <a href="tutorials/quiz/mcq_tuto1.html">Quiz</a></li>
 <li><a href="tutorials/tutorial2/tutorial2_hierarchicalModel.html">Tutorial 2</a>: How to model large-scale spatial variations? <a href="tutorials/quiz/mcq_tuto2.html">Quiz</a></li>
-<li><a href="tutorials/tutorial3/tutorial3_covariates.html">Tutorial 3</a>: How to model small-scale spatial variations?</li>
+<li><a href="tutorials/tutorial3/tutorial3_covariates.html">Tutorial 3</a>: How to model small-scale spatial variations? <a href="tutorials/quiz/mcq_tuto3.html">Quiz</a></li>
 <li><a href="tutorials/tutorial4/tutorial4_diagnosticsPrediction.html">Tutorial 4</a>: Advanced model diagnostics and prediction</li>
+<li><a href="tutorials/day5_presentation.html">Conclusion</a></li>
 </ul>
 </div>
 <div id="raw-code" class="section level2">
@@ -285,6 +295,10 @@ $(document).ready(function () {
 <div id="license" class="section level1">
 <h1>License</h1>
 <p>You are free to redistribute this document under the terms of a Creative Commons Attribution-NoDerivatives 4.0 International (<a href="https://creativecommons.org/licenses/by-nd/4.0/">CC BY-ND 4.0</a>) license.</p>
+</div>
+<div id="suggested-citation" class="section level1">
+<h1>Suggested citation</h1>
+<p>Darin E, Leasure DR, Tatem AJ. 2021. Statistical population modelling for census support. WorldPop, University of Southampton</p>
 <p><br></p>
 <p><br></p>
 <p><img src="assets/pic/320px-UNFPA_logo.svg.png" width="20%" /><img src="assets/pic/wp_logo_gray_low.png" width="20%" /></p>
