--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
+<script async src="//static.getclicky.com/101337718.js"></script>
+<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101337718ns.gif" /></p></noscript>
+    
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -256,7 +259,7 @@ $(document).ready(function () {
 
 
 <h1 class="title toc-ignore">Statistical population modelling for census support</h1>
-<h4 class="date">Last compiled on 2021-10-15</h4>
+<h4 class="date">Last compiled on 2021-10-18</h4>
 
 </div>
 
@@ -298,7 +301,7 @@ $(document).ready(function () {
 </div>
 <div id="suggested-citation" class="section level1">
 <h1>Suggested citation</h1>
-<p>Darin E, Leasure DR, Tatem AJ. 2021. Statistical population modelling for census support. WorldPop, University of Southampton, <a href="https://wpgp.github.io/bottom-up-tutorial/" class="uri">https://wpgp.github.io/bottom-up-tutorial/</a></p>
+<p>Darin E, Leasure DR, Tatem AJ. 2021. Statistical population modelling for census support. WorldPop, University of Southampton, <a href="https://wpgp.github.io/bottom-up-tutorial/" class="uri">https://wpgp.github.io/bottom-up-tutorial/</a>, <a href="doi:10.5281/zenodo.5572490" class="uri">doi:10.5281/zenodo.5572490</a></p>
 <p><br></p>
 <p><br></p>
 <p><img src="assets/pic/320px-UNFPA_logo.svg.png" width="20%" /><img src="assets/pic/wp_logo_gray_low.png" width="20%" /></p>
