--- a/tutorials/day5_presentation.html
+++ b/tutorials/day5_presentation.html
@@ -10,6 +10,9 @@
     <link href="day5_presentation_files/xaringanExtra-scribble/scribble.css" rel="stylesheet" />
     <script src="day5_presentation_files/xaringanExtra-scribble/scribble.js"></script>
     <script>document.addEventListener('DOMContentLoaded', function() { window.xeScribble = new Scribble({"pen_color":["#FF0000"],"pen_size":3,"eraser_size":30,"palette":[]}) })</script>
+    <script async src="//static.getclicky.com/101337718.js"></script>
+    <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101337718ns.gif" /></p></noscript>
+        
     <link rel="stylesheet" href="css/xaringan-themer.css" type="text/css" />
     <link rel="stylesheet" href="css/presentation_custom.css" type="text/css" />
   </head>
