--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <title>Statistical population modelling for census support</title>
 
-<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.13/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
@@ -57,6 +57,7 @@ if (window.hljs) {
 
 
 
+
 <link rel="stylesheet" href="tutorials/css/index_custom.css" type="text/css" />
 
 
@@ -81,6 +82,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -233,7 +237,7 @@ $(document).ready(function () {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -255,39 +259,62 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Statistical population modelling for census support</h1>
-<h4 class="date">Last compiled on 2021-10-04</h4>
+<h1 class="title toc-ignore">Statistical population modelling for census
+support</h1>
+<h4 class="date">Last compiled on 2022-04-12</h4>
 
 </div>
 
 
 <p><img src="assets/pic/wp_logotype_gray_low.png" /></p>
-<p>This website contains the teaching materials for the <strong>Statistical Population Modelling for Census Support workshop,</strong> funded by the <a href="https://www.unfpa.org/">United Nations Population Fund</a>. It has been developed at the <a href="https://www.worldpop.org/">WorldPop Research Group</a>, University of Southampton.</p>
-<p>It has been first taught to the Brazilian Stats Office, Instituto Brasileiro de Geografia e Estatística (IBGE), in October 2021.</p>
+<p>This website contains the teaching materials for the
+<strong>Statistical Population Modelling for Census Support
+workshop,</strong> funded by the <a href="https://www.unfpa.org/">United
+Nations Population Fund</a>. It has been developed at the <a
+href="https://www.worldpop.org/">WorldPop Research Group</a>, University
+of Southampton.</p>
+<p>It has been first taught to the Brazilian Stats Office, Instituto
+Brasileiro de Geografia e Estatística (IBGE), in October 2021.</p>
 <div id="material" class="section level2">
 <h2>Material</h2>
 <ul>
 <li><a href="tutorials/day1_presentation.html">Introduction</a></li>
-<li><a href="tutorials/tutorial1/tutorial1_linearRegression.html">Tutorial 1</a>: How to think about population as a Bayesian?</li>
-<li><a href="tutorials/tutorial2/tutorial2_hierarchicalModel.html">Tutorial 2</a>: How to model large-scale spatial variations?</li>
-<li><a href="tutorials/tutorial3/tutorial3_covariates.html">Tutorial 3</a>: How to model small-scale spatial variations?</li>
-<li><a href="tutorials/tutorial4/tutorial4_diagnosticsPrediction.html">Tutorial 4</a>: Advanced model diagnostics and prediction</li>
+<li><a
+href="tutorials/tutorial1/tutorial1_linearRegression.html">Tutorial
+1</a>: How to think about population as a Bayesian?</li>
+<li><a
+href="tutorials/tutorial2/tutorial2_hierarchicalModel.html">Tutorial
+2</a>: How to model large-scale spatial variations?</li>
+<li><a href="tutorials/tutorial3/tutorial3_covariates.html">Tutorial
+3</a>: How to model small-scale spatial variations?</li>
+<li><a
+href="tutorials/tutorial4/tutorial4_diagnosticsPrediction.html">Tutorial
+4</a>: Advanced model diagnostics and prediction</li>
 </ul>
 </div>
 <div id="raw-code" class="section level2">
 <h2>Raw code</h2>
-<p>The raw code of the website and tutorials, including the R code can be found <a href="https://github.com/wpgp/bottom-up-tutorial">here</a>.</p>
+<p>The raw code of the website and tutorials, including the R code can
+be found <a
+href="https://github.com/wpgp/bottom-up-tutorial">here</a>.</p>
 </div>
 <div id="acknowledgements" class="section level1">
 <h1>Acknowledgements</h1>
-<p>This tutorial was written by Edith Darin from WorldPop, University of Southampton and Douglas Leasure from Leverhulme Centre for Demographic Science, University of Oxford, with supervision from Andrew Tatem, WorldPop, University of Southampton. Funding for the work was provided by the United Nations Population Fund (UNFPA).</p>
+<p>This tutorial was written by Edith Darin from WorldPop, University of
+Southampton and Douglas Leasure from Leverhulme Centre for Demographic
+Science, University of Oxford, with supervision from Andrew Tatem,
+WorldPop, University of Southampton. Funding for the work was provided
+by the United Nations Population Fund (UNFPA).</p>
 </div>
 <div id="license" class="section level1">
 <h1>License</h1>
-<p>You are free to redistribute this document under the terms of a Creative Commons Attribution-NoDerivatives 4.0 International (<a href="https://creativecommons.org/licenses/by-nd/4.0/">CC BY-ND 4.0</a>) license.</p>
+<p>You are free to redistribute this document under the terms of a
+Creative Commons Attribution-NoDerivatives 4.0 International (<a
+href="https://creativecommons.org/licenses/by-nd/4.0/">CC BY-ND 4.0</a>)
+license.</p>
 <p><br></p>
 <p><br></p>
-<p><img src="assets/pic/320px-UNFPA_logo.svg.png" width="20%" /><img src="assets/pic/wp_logo_gray_low.png" width="20%" /></p>
+<p><img src="assets/pic/320px-UNFPA_logo.svg.png" width="20%" /><img src="assets/pic/wp_logo_gray_low.png" width="20%" /><img src="assets/pic/USH0149_LOGO-2021_RGB_Neutral_Punched-AW.svg" width="20%" /></p>
 </div>
 
 
