change unfpa logo

--- a/index.html
+++ b/index.html
@@ -269,26 +269,54 @@ support</h1>
 </div>
 
 
-<p><img src="assets/pic/wp_logotype_grey_hi.png" width="20%" /><img src="assets/pic/USH0149_LOGO-2021_RGB_Neutral_Punched-AW.svg" width="20%" /><img src="assets/pic/320px-UNFPA_logo.svg.png" width="20%" /></p>
-<p>Statistical population modelling is a powerful tool for producing gridded population estimates to support census activities. <a href="https://www.worldpop.org/">WorldPop</a> at the University of Southampton is a global leader in developing these methods and has partnered with the <a href="https://www.unfpa.org/">United Nations Population Fund (UNFPA)</a> to provide support to national statistics offices in training and production of high-resolution gridded population estimates from existing data sources (e.g. household surveys, building footprints, administrative records, census projections).</p>
-<p>This website provides a series of tutorials in <strong>Bayesian statistics for population modelling</strong> and hands-on experience to start developing the necessary skills. It includes example code and other resources designed to expedite the learning curve as much as possible.</p>
+<p><img src="assets/pic/wp_logotype_grey_hi.png" width="20%" /></p>
+<p>Statistical population modelling is a powerful tool for producing
+gridded population estimates to support census activities. <a
+href="https://www.worldpop.org/">WorldPop</a> at the University of
+Southampton is a global leader in developing these methods and has
+partnered with the <a href="https://www.unfpa.org/">United Nations
+Population Fund (UNFPA)</a> to provide support to national statistics
+offices in training and production of high-resolution gridded population
+estimates from existing data sources (e.g. household surveys, building
+footprints, administrative records, census projections).</p>
+<p>This website provides a series of tutorials in <strong>Bayesian
+statistics for population modelling</strong> and hands-on experience to
+start developing the necessary skills. It includes example code and
+other resources designed to expedite the learning curve as much as
+possible.</p>
 <p>The key concepts that are covered in the tutorial series include:</p>
 <ol style="list-style-type: decimal">
-<li><p>Introduction to software for Bayesian statistical modelling:  R and Stan,</p></li>
+<li><p>Introduction to software for Bayesian statistical modelling:  R
+and Stan,</p></li>
 <li><p>Simple linear regression in a Bayesian context,</p></li>
-<li><p>Random effects to account for settlement type (e.g. urban/rural) and other types of stratification in survey data,</p></li>
-<li><p>Quantifying and mapping uncertainties in population estimates and</p></li>
-<li><p>Diagnostics to evaluate model performance (e.g. cross-validation).</p></li>
+<li><p>Random effects to account for settlement type (e.g. urban/rural)
+and other types of stratification in survey data,</p></li>
+<li><p>Quantifying and mapping uncertainties in population estimates
+and</p></li>
+<li><p>Diagnostics to evaluate model performance
+(e.g. cross-validation).</p></li>
 </ol>
-<p>The material has been used during a remote workshop with the Brazilian Stats Office, Instituto Brasileiro de Geografia e Estatística (IBGE), in October 2021.</p>
+<p>The material has been used during a remote workshop with the
+Brazilian Stats Office, Instituto Brasileiro de Geografia e Estatística
+(IBGE), in October 2021.</p>
 <div id="material" class="section level2">
 <h2>Material</h2>
 <ul>
 <li><a href="tutorials/day1_presentation.html">Introduction</a></li>
-<li><a href="tutorials/tutorial1/tutorial1_linearRegression.html">Tutorial 1</a>: How to think like a Bayesian and build a first population model? <a href="tutorials/quiz/mcq_tuto1.html">Quiz</a></li>
-<li><a href="tutorials/tutorial2/tutorial2_hierarchicalModel.html">Tutorial 2</a>: How to model large-scale spatial variations? <a href="tutorials/quiz/mcq_tuto2.html">Quiz</a></li>
-<li><a href="tutorials/tutorial3/tutorial3_covariates.html">Tutorial 3</a>: How to model small-scale spatial variations? <a href="tutorials/quiz/mcq_tuto3.html">Quiz</a></li>
-<li><a href="tutorials/tutorial4/tutorial4_diagnosticsPrediction.html">Tutorial 4</a>: Advanced model diagnostics and prediction</li>
+<li><a
+href="tutorials/tutorial1/tutorial1_linearRegression.html">Tutorial
+1</a>: How to think like a Bayesian and build a first population model?
+<a href="tutorials/quiz/mcq_tuto1.html">Quiz</a></li>
+<li><a
+href="tutorials/tutorial2/tutorial2_hierarchicalModel.html">Tutorial
+2</a>: How to model large-scale spatial variations? <a
+href="tutorials/quiz/mcq_tuto2.html">Quiz</a></li>
+<li><a href="tutorials/tutorial3/tutorial3_covariates.html">Tutorial
+3</a>: How to model small-scale spatial variations? <a
+href="tutorials/quiz/mcq_tuto3.html">Quiz</a></li>
+<li><a
+href="tutorials/tutorial4/tutorial4_diagnosticsPrediction.html">Tutorial
+4</a>: Advanced model diagnostics and prediction</li>
 <li><a href="tutorials/day5_presentation.html">Conclusion</a></li>
 </ul>
 </div>
@@ -308,11 +336,20 @@ by the United Nations Population Fund (UNFPA).</p>
 </div>
 <div id="license" class="section level1">
 <h1>License</h1>
-<p>You are free to redistribute this document under the terms of a Creative Commons Attribution-NoDerivatives 4.0 International (<a href="https://creativecommons.org/licenses/by-nd/4.0/">CC BY-ND 4.0</a>) license.</p>
+<p>You are free to redistribute this document under the terms of a
+Creative Commons Attribution-NoDerivatives 4.0 International (<a
+href="https://creativecommons.org/licenses/by-nd/4.0/">CC BY-ND 4.0</a>)
+license.</p>
 </div>
 <div id="suggested-citation" class="section level1">
 <h1>Suggested citation</h1>
-<p>Darin E, Leasure DR, Tatem AJ. 2021. Statistical population modelling for census support. United Nations Population Fund (UNFPA) and WorldPop, University of Southampton. <a href="https://wpgp.github.io/bottom-up-tutorial/" class="uri">https://wpgp.github.io/bottom-up-tutorial/</a>, <a href="doi:10.5281/zenodo.5572490" class="uri">doi:10.5281/zenodo.5572490</a></p>
+<p>Darin E, Leasure DR, Tatem AJ. 2021. Statistical population modelling
+for census support. United Nations Population Fund (UNFPA) and WorldPop,
+University of Southampton. <a
+href="https://wpgp.github.io/bottom-up-tutorial/"
+class="uri">https://wpgp.github.io/bottom-up-tutorial/</a>, <a
+href="doi:10.5281/zenodo.5572490"
+class="uri">doi:10.5281/zenodo.5572490</a></p>
 <p><br></p>
 <p><br></p>
 <p><img src="assets/pic/320px-UNFPA_logo.svg.png" width="20%" /><img src="assets/pic/wp_logo_gray_low.png" width="20%" /><img src="assets/pic/USH0149_LOGO-2021_RGB_Neutral_Punched-AW.svg" width="20%" /></p>
