add workflow to website tree

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">Statistical population modelling for census
 support</h1>
-<h4 class="date">Last compiled on 2022-04-12</h4>
+<h4 class="date">Last compiled on 2022-06-01</h4>
 
 </div>
 
@@ -318,6 +318,9 @@ href="tutorials/quiz/mcq_tuto3.html">Quiz</a></li>
 href="tutorials/tutorial4/tutorial4_diagnosticsPrediction.html">Tutorial
 4</a>: Advanced model diagnostics and prediction</li>
 <li><a href="tutorials/day5_presentation.html">Conclusion</a></li>
+<li><a href="tutorials/workflow/populationModel_workfow.html">Workflow
+refresher</a>: Building a population model from start to end + a tale
+about hierarchical model parametrisation</li>
 </ul>
 </div>
 <div id="raw-code" class="section level2">
