link with spanish version and add lcds logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <title>Statistical population modelling for census support</title>
 
-<script src="site_libs/header-attrs-2.13/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.21/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
@@ -145,11 +145,15 @@ $(document).ready(function () {
     href = "index.html";
   var menuAnchor = $('a[href="' + href + '"]');
 
-  // mark it active
-  menuAnchor.tab('show');
-
-  // if it's got a parent navbar menu mark it active as well
-  menuAnchor.closest('li.dropdown').addClass('active');
+  // mark the anchor link active (and if it's in a dropdown, also mark that active)
+  var dropdown = menuAnchor.closest('li.dropdown');
+  if (window.bootstrap) { // Bootstrap 4+
+    menuAnchor.addClass('active');
+    dropdown.find('> .dropdown-toggle').addClass('active');
+  } else { // Bootstrap 3
+    menuAnchor.parent().addClass('active');
+    dropdown.addClass('active');
+  }
 
   // Navbar adjustments
   var navHeight = $(".navbar").first().height() + 15;
@@ -178,8 +182,8 @@ $(document).ready(function () {
   border-radius: 4px;
 }
 
-.tabset-dropdown > .nav-tabs > li.active:before {
-  content: "";
+.tabset-dropdown > .nav-tabs > li.active:before, .tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+  content: "\e259";
   font-family: 'Glyphicons Halflings';
   display: inline-block;
   padding: 10px;
@@ -187,16 +191,9 @@ $(document).ready(function () {
 }
 
 .tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
-  content: "&#xe258;";
-  border: none;
-}
-
-.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
-  content: "";
+  content: "\e258";
   font-family: 'Glyphicons Halflings';
-  display: inline-block;
-  padding: 10px;
-  border-right: 1px solid #ddd;
+  border: none;
 }
 
 .tabset-dropdown > .nav-tabs > li.active {
@@ -258,18 +255,18 @@ $(document).ready(function () {
   </div><!--/.container -->
 </div><!--/.navbar -->
 
+		<p style="text-align:right"><a href="https://wpgp.github.io/bottom-up-tutorial-es/">Versión en español</a></p>
 <div id="header">
 
 
 
 <h1 class="title toc-ignore">Statistical population modelling for census
 support</h1>
-<h4 class="date">Last compiled on 2022-06-01</h4>
+<h4 class="date">Last compiled on 2023-05-10</h4>
 
 </div>
 
 
-<p><img src="assets/pic/wp_logotype_grey_hi.png" width="10%" /></p>
 <p>Statistical population modelling is a powerful tool for producing
 gridded population estimates to support census activities. <a
 href="https://www.worldpop.org/">WorldPop</a> at the University of
@@ -355,7 +352,8 @@ href="doi:10.5281/zenodo.5572490"
 class="uri">doi:10.5281/zenodo.5572490</a></p>
 <p><br></p>
 <p><br></p>
-<p><img src="assets/pic/320px-UNFPA_logo.svg.png" width="20%" /><img src="assets/pic/wp_logo_gray_low.png" width="20%" /><img src="assets/pic/USH0149_LOGO-2021_RGB_Neutral_Punched-AW.svg" width="20%" /></p>
+<p><img src="assets/pic/320px-UNFPA_logo.svg.png" width="20%" /><img src="assets/pic/wp_logo_gray_low.png" width="20%" /><img src="assets/pic/USH0149_LOGO-2021_RGB_Neutral_Punched-AW.svg" width="20%" />
+				<img src="assets/pic/Ox_LCDS_logo_bw.png" width="20%" /></p>
 </div>
 
 
