--- a/index.html
+++ b/index.html
@@ -255,14 +255,15 @@ $(document).ready(function () {
   </div><!--/.container -->
 </div><!--/.navbar -->
 
-		<p style="text-align:right"><a href="https://wpgp.github.io/bottom-up-tutorial-es/">Versión en español</a></p>
+<p style="text-align:right"><a href="./lang/es/index.html">Versión en español</a></p>
+
 <div id="header">
 
 
 
 <h1 class="title toc-ignore">Statistical population modelling for census
 support</h1>
-<h4 class="date">Last compiled on 2023-05-10</h4>
+<h4 class="date">Last compiled on 2023-05-17</h4>
 
 </div>
 
@@ -270,12 +271,15 @@ support</h1>
 <p>Statistical population modelling is a powerful tool for producing
 gridded population estimates to support census activities. <a
 href="https://www.worldpop.org/">WorldPop</a> at the University of
-Southampton is a global leader in developing these methods and has
-partnered with the <a href="https://www.unfpa.org/">United Nations
-Population Fund (UNFPA)</a> to provide support to national statistics
-offices in training and production of high-resolution gridded population
-estimates from existing data sources (e.g. household surveys, building
-footprints, administrative records, census projections).</p>
+Southampton and the <a
+href="https://www.demography.ox.ac.uk/">Leverhulme Centre for
+Demographic Science</a> at the University of Oxford are global leaders
+in developing these methods and have partnered with the <a
+href="https://www.unfpa.org/">United Nations Population Fund (UNFPA)</a>
+to provide support to national statistics offices in training and
+production of high-resolution gridded population estimates from existing
+data sources (e.g. household surveys, building footprints,
+administrative records, census projections).</p>
 <p>This website provides a series of tutorials in <strong>Bayesian
 statistics for population modelling</strong> and hands-on experience to
 start developing the necessary skills. It includes example code and
@@ -283,7 +287,7 @@ other resources designed to expedite the learning curve as much as
 possible.</p>
 <p>The key concepts that are covered in the tutorial series include:</p>
 <ol style="list-style-type: decimal">
-<li><p>Introduction to software for Bayesian statistical modelling:  R
+<li><p>Introduction to software for Bayesian statistical modelling: R
 and Stan,</p></li>
 <li><p>Simple linear regression in a Bayesian context,</p></li>
 <li><p>Random effects to account for settlement type (e.g. urban/rural)
@@ -293,9 +297,11 @@ and</p></li>
 <li><p>Diagnostics to evaluate model performance
 (e.g. cross-validation).</p></li>
 </ol>
-<p>The material has been used during a remote workshop with the
-Brazilian Stats Office, Instituto Brasileiro de Geografia e Estatística
-(IBGE), in October 2021.</p>
+<p>The material has been used during an in-person workshop hosted by the
+Colombian National Administrative Department of Statistics in Bogota,
+Colombia in March 2023 and a remote workshop with the Brazilian Stats
+Office, Instituto Brasileiro de Geografia e Estatística (IBGE), in
+October 2021.</p>
 <div id="material" class="section level2">
 <h2>Material</h2>
 <ul>
@@ -332,28 +338,30 @@ href="https://github.com/wpgp/bottom-up-tutorial">here</a>.</p>
 Southampton and Douglas Leasure from Leverhulme Centre for Demographic
 Science, University of Oxford, with supervision from Andrew Tatem,
 WorldPop, University of Southampton. Funding for the work was provided
-by the United Nations Population Fund (UNFPA).</p>
+by the United Nations Population Fund (UNFPA), the Leverhulme Trust
+(RC-2018-003) and ESRC Impact Acceleration Account at the University of
+Oxford (2209-KEA-835).</p>
 </div>
 <div id="license" class="section level1">
 <h1>License</h1>
 <p>You are free to redistribute this document under the terms of a
-Creative Commons Attribution-NoDerivatives 4.0 International (<a
-href="https://creativecommons.org/licenses/by-nd/4.0/">CC BY-ND 4.0</a>)
+Creative Commons Attribution 4.0 International (<a
+href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>)
 license.</p>
 </div>
 <div id="suggested-citation" class="section level1">
 <h1>Suggested citation</h1>
-<p>Darin E, Leasure DR, Tatem AJ. 2021. Statistical population modelling
-for census support. United Nations Population Fund (UNFPA) and WorldPop,
-University of Southampton. <a
+<p>Darin E, Leasure DR, Tatem AJ. 2023. Statistical population modelling
+for census support. United Nations Population Fund (UNFPA), Leverhulme
+Centre for Demographic Science, University of Oxford, and WorldPop,
+University of Southampton. <a
 href="https://wpgp.github.io/bottom-up-tutorial/"
 class="uri">https://wpgp.github.io/bottom-up-tutorial/</a>, <a
 href="doi:10.5281/zenodo.5572490"
 class="uri">doi:10.5281/zenodo.5572490</a></p>
 <p><br></p>
 <p><br></p>
-<p><img src="assets/pic/320px-UNFPA_logo.svg.png" width="20%" /><img src="assets/pic/wp_logo_gray_low.png" width="20%" /><img src="assets/pic/USH0149_LOGO-2021_RGB_Neutral_Punched-AW.svg" width="20%" />
-				<img src="assets/pic/Ox_LCDS_logo_bw.png" width="20%" /></p>
+<p><img src="assets/pic/320px-UNFPA_logo.svg.png" width="20%" /><img src="assets/pic/wp_logo_gray_low.png" width="20%" /><img src="assets/pic/USH0149_LOGO-2021_RGB_Neutral_Punched-AW.svg" width="20%" /><img src="assets/pic/Ox_LCDS_logo_bw.png" width="20%" /></p>
 </div>
 
 
