--- a/index.html
+++ b/index.html
@@ -357,8 +357,8 @@ Centre for Demographic Science, University of Oxford, and WorldPop,
 University of Southampton. <a
 href="https://wpgp.github.io/bottom-up-tutorial/"
 class="uri">https://wpgp.github.io/bottom-up-tutorial/</a>, <a
-href="doi:10.5281/zenodo.5572490"
-class="uri">doi:10.5281/zenodo.5572490</a></p>
+href="https://doi.org/10.5281/zenodo.7945266"
+class="uri">doi:10.5281/zenodo.7945266</a></p>
 <p><br></p>
 <p><br></p>
 <p><img src="assets/pic/320px-UNFPA_logo.svg.png" width="20%" /><img src="assets/pic/wp_logo_gray_low.png" width="20%" /><img src="assets/pic/USH0149_LOGO-2021_RGB_Neutral_Punched-AW.svg" width="20%" /><img src="assets/pic/Ox_LCDS_logo_bw.png" width="20%" /></p>
