--- a/lang/es/index.html
+++ b/lang/es/index.html
@@ -348,7 +348,7 @@
 			<h1>Cita sugerida</h1>
 			<p>
 				Darin E, Leasure DR, Tatem AJ. 2023. Modelización estadística de la población para apoyar los censos. Fondo de Población de las Naciones Unidas (UNFPA), Leverhulme Centre for Demographic Science, Universidad de Oxford y WorldPop, Universidad de Southampton. 
-				<a href="https://wpgp.github.io/bottom-up-tutorial/" class="uri">https://wpgp.github.io/bottom-up-tutorial/</a>, <a href="doi:10.5281/zenodo.5572490" class="uri">doi:10.5281/zenodo.5572490</a>
+				<a href="https://wpgp.github.io/bottom-up-tutorial/" class="uri">https://wpgp.github.io/bottom-up-tutorial/</a>, <a href="https://doi.org/10.5281/zenodo.7945266" class="uri">doi:10.5281/zenodo.7945266</a>
 			</p>
 			<p><br /></p>
 			<p><br /></p>
